--- a/YeonSupaTodo/Info.plist
+++ b/YeonSupaTodo/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>BASE_URL</key>
+	<string>${BASE_URL}</string>
+	<key>SUPABASE_KEY</key>
+	<string>${SUPABASE_KEY}</string>
 </dict>
 </plist>
